--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,9 @@
 <h1>Create a new Article</h1>
+<% if @article.errors.any? %>
+  <% @article.errors.full_messages.each do |msg | %>
+    <li><%= msg %></li>
+  <% end %>
+<% end %>
 
 <%= form_for @article do |f| %>
   <p>
