--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <% flash.each do |name, message| %>
+      <ul><li><%= message%></li></ul>
+    <% end %>
     <%= yield %>
   </body>
 </html>
